--- a/2018_10_AllThingsOpen.podium/index.html
+++ b/2018_10_AllThingsOpen.podium/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Podium slide deck</title>
+    <title>Turning 'wat' into 'why' - All Things Open</title>
     <link rel="stylesheet" type="text/css" href="./theme.css">
   </head>
   <body>
