--- a/2019_05_PyConUS.podium/index.html
+++ b/2019_05_PyConUS.podium/index.html
@@ -1,58 +1,33 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Talk</title>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-    <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/theme/projection_white.css" id="theme">
-    <link rel="stylesheet" href="lib/font/pt-sans/pt-sans.css">
-    <link rel="stylesheet" href="lib/css/github.css">
-    <link rel="stylesheet" href="css/glasnt.css">
-    <link rel="stylesheet" href="css/emoji_glitch.css">
-    <script>
-      var link = document.createElement( 'link' );
-      link.rel = 'stylesheet';
-      link.type = 'text/css';
-      link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-      document.getElementsByTagName( 'head' )[0].appendChild( link );
-    </script>
-    <!--[if lt IE 9]>
-    <script src="lib/js/html5shiv.js"></script>
-    <![endif]-->
+    <title>Podium slide deck</title>
+    <link rel="stylesheet" type="text/css" href="./theme.css">
   </head>
-
   <body>
-    <div class="reveal">
-      <div class="slides">
-        <section data-markdown="slides.md"
-           data-separator="---"
-           data-separator-notes="^Note:"
-           data-charset="utf-8">
-        </section>
-      </div>
-    </div>
-    <script src="lib/js/head.min.js"></script>
-    <script src="js/reveal.js"></script>
+    <textarea id='source'></textarea>
+    <script src="../resources/remark.js"></script>
     <script>
-      Reveal.initialize({
-        controls: false,
-        progress: false,
-        history: true,
-        center: false,
-        transition: 'none',
-        backgroundTransition: 'none',
-        dependencies: [
-          { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-          { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-          { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-          { src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-          { src: 'plugin/zoom-js/zoom.js', async: true },
-          { src: 'plugin/notes/notes.js', async: true }
-        ]
-      });
+        var slideshow;
+
+        document.addEventListener('DOMContentLoaded', function(){
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+                if (this.status == 200) {
+                    window.source.innerHTML = this.responseText;
+                } else if (this.status == 404) {
+                    window.source.innerHTML = "Slide content not found.";
+                } else {
+                    window.source.innerHTML = "Error loading slide content.";
+                }
+                slideshow = remark.create({
+                    ratio: "16:9"
+                });
+            }
+            xhttp.open("GET", './slides.md', true);
+            xhttp.send();
+        })
     </script>
   </body>
 </html>
