--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,6 +28,6 @@ layout: page
         <a href="https://www.flickr.com/photos/140681500@N07/27775305387/in/album-72157669873315198/">Header</a> and <a href="https://www.flickr.com/photos/140681500@N07/25783265643/in/dateposted/">footer</a> images by <a href="https://www.flickr.com/photos/140681500@N07/">Bartek Pawlik</a>, used under <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC 2.0</a>
     </div>
   </div>
-    <div class="section intro-header" style="margin-bottom: 0; background-image: url('{{site.url}}/img/footer_image.jpg')">
+    <div class="section intro-header" style="margin-bottom: 0; background-image: url('{{site.baseurl}}/img/footer_image.jpg')">
     <div class="container">&nbsp; </div>
   </div>
