--- a/2019_09_YOWPerth.podium/index.html
+++ b/2019_09_YOWPerth.podium/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Turning wat into why - PyCascades 2019</title>
-    <link rel="stylesheet" type="text/css" href="./theme.css">
+    <title>Turning wat into why - YOW! Perth 2019</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     <textarea id='source'></textarea>
