--- a/2019_09_PDPD.podium/index.html
+++ b/2019_09_PDPD.podium/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Turning wat into why - PyCascades 2019</title>
+    <title>Turning wat into why</title>
     <link rel="stylesheet" type="text/css" href="./theme.css">
   </head>
   <body>
