--- a/2019_10_DevOpsDaysAKL.podium/index.html
+++ b/2019_10_DevOpsDaysAKL.podium/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Podium slide deck</title>
-    <link rel="stylesheet" type="text/css" href="./theme.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
     <textarea id='source'></textarea>
