--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: page
 
 <div class="section">
     <div class="container">
-
+      {% if site.data.upcoming.size > 0 %}
       <h3>Upcoming talks</h3>
 
       {% for c in site.data.upcoming %} 
@@ -32,6 +32,7 @@ layout: page
       </div>
       {% endfor%}
       {% endfor%}
+      {% endif %}
 
       <br><BR>
 
