Add notist link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: page
       <div class="row">&nbsp;</div>
         <div class="row">
         <p>
-All slides are hosted on <a href="https://github.com/glasnt/talks">GitHub</a>. See also: <a href="http://pyvideo.org/speaker/katie-mclaughlin.html">pyvideo profile</a>
+Source hosted on <a href="https://github.com/glasnt/talks">GitHub</a>. See also: <a href="http://pyvideo.org/speaker/katie-mclaughlin.html">pyvideo profile</a>, <a href="https://noti.st/glasnt">notist</a>.
 <br>
         <a href="https://www.flickr.com/photos/140681500@N07/27775305387/in/album-72157669873315198/">Header</a> and <a href="https://www.flickr.com/photos/140681500@N07/25783265643/in/dateposted/">footer</a> images by <a href="https://www.flickr.com/photos/140681500@N07/">Bartek Pawlik</a>, used under <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC 2.0</a>
    
