--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@ header-img: "../img/talking_header.jpg"
 {% endfor %}
 <div class="row">&nbsp;</div>
 <div class="row">
-<p>Source hosted on <a href="https://github.com/glasnt/talks">GitHub</a>. See also: <a href="http://pyvideo.org/speaker/katie-mclaughlin.html">pyvideo profile</a>, <a href="https://noti.st/glasnt">notist</a>.
+<p>Source hosted on <a href="https://github.com/glasnt/talks">GitHub</a>. See also: <a href="http://pyvideo.org/speaker/katie-mclaughlin.html">pyvideo profile</a>, <a href="https://noti.st/glasnt">notist</a>. <a href="https://www.flickr.com/photos/140681500@N07/27775305387/in/album-72157669873315198/">Header</a> image by <a href="https://www.flickr.com/photos/140681500@N07/">Bartek Pawlik</a>, used under <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC 2.0</a>
+
 </div>
