--- a/2021_10_DjangoConUS.podium/index.html
+++ b/2021_10_DjangoConUS.podium/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="../img/favicon.ico" sizes="any">
     <title>What is deployment, anyway? - PyGotham 2019</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
