--- a/2021_10_DjangoConUS.podium/index.html
+++ b/2021_10_DjangoConUS.podium/index.html
@@ -10,25 +10,10 @@
     <textarea id='source'></textarea>
     <script src="../resources/remark.js"></script>
     <script>
-        var slideshow;
-
-        document.addEventListener('DOMContentLoaded', function(){
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function() {
-                if (this.status == 200) {
-                    window.source.innerHTML = this.responseText;
-                } else if (this.status == 404) {
-                    window.source.innerHTML = "Slide content not found.";
-                } else {
-                    window.source.innerHTML = "Error loading slide content.";
-                }
-                slideshow = remark.create({
-                    ratio: "16:9"
-                });
-            }
-            xhttp.open("GET", './slides.md', true);
-            xhttp.send();
-        })
+        var slideshow = remark.create({
+            ratio: "16:9",
+            sourceUrl: "slides.md"
+        });
     </script>
   </body>
 </html>
