--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@ layout: default
 
 
 <article class="page container">
-  <!-- <header class="page-header">
-    <h1 class="page-title">Popular Talks</h1>
+  <header class="page-header">
+    <h1 class="page-title">Talk writeups</h1>
   </header>
-  -->
+  <li><a href="what-is-deployment-anyway">What is deployment, anyway?</a></li>
 
   <div class="page-content">
 
     <header class="page-header">
-      <h1 class="page-title">Full list of talks</h1>
+      <h1 class="page-title">Complete history of talks</h1>
     </header>
   
 {% assign talk_num = talk_total %}
