--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ layout: default
     <h1 class="page-title">Talk writeups</h1>
   </header>
   <li><a href="what-is-deployment-anyway">What is deployment, anyway?</a></li>
+  <li><a href="expressive-security">Expressive Security: Vulnerabilities with Emoji</a></li>
 
   <div class="page-content">
 
