attempting cleanup of talk list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@ layout: default
 
 <style>
 .row div {display: inline-block}
+/*
+.item.counter { width: 5% }
+.item.podcastcounter { width: 5% }
+.item.type { width: 15% }
+.item.link { width: 60% }
+*/
+.item.icons { float: right }
+
+/* for mobile, do this */
+@media (max-width: 700px) {
+  /*
+  .item.counter { width: 10%; }
+  .item.podcastcounter { display: none}
+  .item.link { display: block; width: 100%} */
+  .item.icons { float: none; }
+ 
+}
 </style>
 
 
@@ -48,19 +65,26 @@ layout: default
   </div>
   {% for talk in c.conference.talks %}
   <div class="row">
-    <div style="width: 5%">{% if talk.type != "Podcast" %}#{{ talk_num }}{% endif %}</div>
-    <div style="width: 15%">{{talk.type | default: "Talk"}}</div>
-    <div style="width: 60%">{% if talk.link %}<a href="{{talk.link}}">{{talk.name}}</a>{%else%}"{{talk.name}}"{%endif%}</div>
-    <div style="width: 15%; text-align: right;">
-      {% if talk.slides %} <a href="{{talk.slides}}"><span class="material-icons">slideshow</span></a>{% endif %}
-      {% if talk.video %} <a href="{{talk.video}}"><span class="material-icons">smart_display</span></a>{% endif %}
-      {% if talk.twitter %} <a href="{{talk.twitter}}"><span class="material-icons">post_add</span></a>{% endif %}
-      {% if talk.transcript %} <a href="{{talk.transcript}}"><span class="material-icons">record_voice_over</span></a>{% endif %}
-      {% if talk.resources %} <a href="{{talk.resources}}"><span class="material-icons">assignment</span></a>{% endif %}
-      {% if talk.feedback %} <a href="{{talk.feedback}}"><span class="material-icons">forum</span></a>{% endif %}
-      {% if talk.article %} <a href="{{talk.article}}"><span class="material-icons">article</span></a>{% endif %}
-      {% if talk.photo %} <a href="{{talk.photo}}"><span class="material-icons">photo_library</span></a>{% endif %}
-      {% if talk.type == "Podcast" %} <a href="{{talk.link}}"><span class="material-icons">podcasts</span></a>{% endif %}
+    {% if talk.type != "Podcast" %}
+    <div class="item counter">[#{{ talk_num }}]</div>
+    {% else %}
+    <div class="item podcastcounter"></div>
+    {% endif %}
+    <div class="item type">{{talk.type | default: "Talk"}} - </div>
+    {{talk.name}}
+    <div class="item links">
+      {% if talk.link %}<a href="{{talk.link}}">(talk info)</a>{%endif%}
+      {% if talk.slides %} <a href="{{talk.slides}}">(slides)</a>{% endif %}
+    </div>
+    <div class="item icons">
+      {% if talk.video %} <a href="{{talk.video}}"><span title="video" class="material-icons">smart_display</span></a>{% endif %}
+      {% if talk.twitter %} <a href="{{talk.twitter}}"><span title="twitter" class="material-icons">post_add</span></a>{% endif %}
+      {% if talk.transcript %} <a href="{{talk.transcript}}"><span title="transcript" class="material-icons">record_voice_over</span></a>{% endif %}
+      {% if talk.resources %} <a href="{{talk.resources}}"><span title="resources" class="material-icons">assignment</span></a>{% endif %}
+      {% if talk.feedback %} <a href="{{talk.feedback}}"><span title="feedback" class="material-icons">forum</span></a>{% endif %}
+      {% if talk.article %} <a href="{{talk.article}}"><span title="article" class="material-icons">article</span></a>{% endif %}
+      {% if talk.photo %} <a href="{{talk.photo}}"><span title="photo" class="material-icons">photo_library</span></a>{% endif %}
+      {% if talk.type == "Podcast" %} <a href="{{talk.link}}"><span title="podcast" class="material-icons">podcasts</span></a>{% endif %}
     </div>
 
     {% if talk.type != "Podcast" %}
